# daily-zine

./: .env.example  .gitignore  README.md  feed.xml  index.html  pyproject.toml  zine-2026-04-07.html  zine-2026-04-08.html  zine-2026-04-09.html  zine-2026-04-10.html  zine-2026-04-11.html  zine-2026-04-12.html
.github/scripts/: generate-index.py
.github/workflows/: daily-zine.yml
src/ziner/: cli.py  feed.py  layout.py  render.py
src/ziner/templates/: zine.html
