[project]
name = "ziner"
version = "0.1.0"
description = "Daily zine generator from Readwise Reader feed"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "weasyprint>=62",
    "jinja2>=3.1",
    "pypdf>=6.9.2",
]

[project.scripts]
ziner = "ziner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ziner"]
